--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <img src="https://www.tripalbum.net/buenos-aires/chien.jpg" alt="Sensational" width="300" height="300">
 
-        <h1>Tarana S Shetty</h1>
+        <h1>Sassy streaks</h1>
         <p><em>Undergrad student.</em></p>
         <p>I am an <strong><a href="https://www.computerscience.org/careers/web-developer/" >Web Developer</a></strong>. I love coffee and brew my own beer.</p>
         <hr size="3">
